--- a/MyRACStudy/Base.lproj/Main.storyboard
+++ b/MyRACStudy/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="6198" systemVersion="14A297b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6198"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9532"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -641,12 +642,12 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="MyRACStudy" customModuleProvider="target"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="75" y="0.0"/>
         </scene>
-        <!--Window Controller - Window-->
+        <!--Window Controller-->
         <scene sceneID="R2V-B0-nI4">
             <objects>
                 <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
@@ -655,6 +656,7 @@
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="196" y="240" width="480" height="270"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
+                        <value key="minFullScreenContentSize" type="size" width="480" height="270"/>
                     </window>
                     <connections>
                         <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
@@ -667,11 +669,71 @@
         <!--View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="m2S-Jp-Qdl">
+                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="MyRACStudy" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tVB-k1-C8a">
+                                <rect key="frame" x="54" y="198" width="373" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="373" id="wkT-bJ-bUZ"/>
+                                </constraints>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="left" placeholderString="用户名/邮箱/手机号码" drawsBackground="YES" id="sdp-Tm-Gzl">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <secureTextField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="4ZK-wR-2uw">
+                                <rect key="frame" x="54" y="166" width="373" height="22"/>
+                                <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="密码" drawsBackground="YES" usesSingleLineMode="YES" id="hj4-Wh-i1F">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                    <allowedInputSourceLocales>
+                                        <string>NSAllRomanInputSourcesLocaleIdentifier</string>
+                                    </allowedInputSourceLocales>
+                                </secureTextFieldCell>
+                            </secureTextField>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="s0O-Uu-Vin">
+                                <rect key="frame" x="182" y="47" width="116" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="104" id="GNF-si-3LK"/>
+                                </constraints>
+                                <buttonCell key="cell" type="push" title="登录" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="j2O-kh-00A">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                            </button>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="gag-YC-4en">
+                                <rect key="frame" x="347" y="139" width="80" height="19"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="1SV-7m-QnJ"/>
+                                </constraints>
+                                <buttonCell key="cell" type="roundRect" title="忘记密码" bezelStyle="roundedRect" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="KWA-QF-B9T">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="cellTitle"/>
+                                </buttonCell>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="tVB-k1-C8a" firstAttribute="trailing" secondItem="4ZK-wR-2uw" secondAttribute="trailing" id="8nC-1W-p88"/>
+                            <constraint firstItem="tVB-k1-C8a" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="50" id="Bql-iX-vT5"/>
+                            <constraint firstItem="gag-YC-4en" firstAttribute="top" secondItem="4ZK-wR-2uw" secondAttribute="bottom" constant="8" symbolic="YES" id="Eon-6w-48x"/>
+                            <constraint firstItem="s0O-Uu-Vin" firstAttribute="top" secondItem="4ZK-wR-2uw" secondAttribute="bottom" constant="91" id="Iy7-eb-gqm"/>
+                            <constraint firstItem="tVB-k1-C8a" firstAttribute="leading" secondItem="4ZK-wR-2uw" secondAttribute="leading" id="Nqp-xJ-hrz"/>
+                            <constraint firstItem="4ZK-wR-2uw" firstAttribute="centerX" secondItem="s0O-Uu-Vin" secondAttribute="centerX" id="Ry9-TE-XGv"/>
+                            <constraint firstItem="4ZK-wR-2uw" firstAttribute="trailing" secondItem="gag-YC-4en" secondAttribute="trailing" id="SrS-hg-iPL"/>
+                            <constraint firstItem="tVB-k1-C8a" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="54" id="Tvk-yo-FB9"/>
+                            <constraint firstItem="4ZK-wR-2uw" firstAttribute="top" secondItem="tVB-k1-C8a" secondAttribute="bottom" constant="10" symbolic="YES" id="ak3-ql-Eln"/>
+                            <constraint firstItem="s0O-Uu-Vin" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="xQV-Ui-tGH"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="password" destination="4ZK-wR-2uw" id="xco-ub-8zz"/>
+                        <outlet property="username" destination="tVB-k1-C8a" id="bMU-oJ-xQI"/>
+                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
